--- a/pik/appmanifest.json
+++ b/pik/appmanifest.json
@@ -1,6 +1,6 @@
 ﻿{
-	"name": "New project",
-	"short_name": "New project",
+	"name": "Polowniak i Kiep",
+	"short_name": "Polowniak i Kiep",
 	"start_url": "index.html",
 	"display": "fullscreen",
 	"orientation": "portrait",
